--- a/digital_trainer/workout/templates/workout/movement_detail.html
+++ b/digital_trainer/workout/templates/workout/movement_detail.html
@@ -3,4 +3,4 @@
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
-<p>{{ movement.description }}</p>
+<p>{{ movement.description|safe }}</p>
