--- a/digital_trainer/workout/templates/workout/exercise_list.html
+++ b/digital_trainer/workout/templates/workout/exercise_list.html
@@ -1,4 +1,4 @@
-<h1>Movements</h1>
+<h1>Exercises</h1>
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 <ul>
@@ -8,5 +8,3 @@
 	<li>No exercises yet.</li>
 {% endfor %}
 </ul>
-
-<p>{{ exercise.description }}</p>
