movement react movement form to new url. Initial setup of programmer

--- a/digital_trainer/frontend/templates/frontend/movement.html
+++ b/digital_trainer/frontend/templates/frontend/movement.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
-	<h1>Digital Trainer</h1>
 	<section class="section">
-		<p> This is only a test</p>
+		<div class="container">
+			<div id="app" class="columns"><!-- React --></div>
+		</div>
 	</section>
 </body>
 
